# TIDAQ

./: README.md  index.html  params.json
C++/: CMakeLists.txt  CT_Analysis_Mid_Thigh.cxx  PQCTAnalysisJNI.h  PQCT_Analysis.cxx  PQCT_Analysis.h  PQCT_AnalysisITK.cxx  PQCT_AnalysisJNI.h  PQCT_AnalysisWrapper.cxx  PQCT_AnalysisWrapper.h  PQCT_AnalysisWrapperITK.h  PQCT_Analysis_File_IO.cxx  PQCT_Analysis_Four_PCT.cxx  PQCT_Analysis_SixtySix_PCT.cxx  PQCT_Analysis_ThirtyEight_PCT.cxx  PQCT_Datatypes.h
Java/: .directory  bin
Java/DSU-NIA/: .directory  PQCTAnalysisJNI.java  PlugInTIDAQ.java  PlugInTIDAQAlgorithm.java  PlugInTIDAQDialog.java  PlugInTIDAQImageViewer.java  PlugInTibEsT.java  PlugInTibEsTAlgorithm.java  PlugInTibEsTDialog.java  PlugInTibEsTImageViewer.java  Read_PQCT.java  Tibia_Analysis_PQCT.java
Matlab/: AnalyzePQCTImageInFeatureSpace.m  BatchAnalyzePQCTImageInFeatureSpace.m  Contents.m  ConvertPQCTImageToNifti.m  ReadPQCTImage.m
Scripts/: CT_Analysis_Params_MidThigh.txt  CT_Analysis_Params_MidThigh2.txt  PQCT_Analysis_Params.txt  PQCT_Analysis_Params_4PCT.txt  PQCT_Analysis_Params_4PCT_20120322.txt  PQCT_Analysis_Params_66PCT.txt  PQCT_Analysis_Params_66PCT_20120326.txt  PlugInTibestResources.nsi  Readme.txt  lgpl-2.1.txt  license.txt
